Arreglé errores al deployar